유저토큰 기반 시큐리티

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,6 @@ spring.jpa.open-in-view= false
 spring.jpa.database= mysql
 spring.jpa.show-sql= true
 spring.jpa.generate-ddl= true
-spring.jpa.hibernate.ddl-auto= update
+spring.jpa.hibernate.ddl-auto= create-drop
+
+uri.exclude.tokenCheckFilter=/abc,/user/sign-up
